# reactive-banana-dvd

./: README.md  changelog.md  default.nix  dvd.cabal  dvd.cabal.template  gen-cabal.sh
app/: Dvd.hs
nix/: local.sources.json  sources.json
nix/haskell/: overlay.nix
src/: Interview.hs
test/: Driver.hs
